# claude-code-cc-version

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_cn.md  README_en.md
config/.prosophor/: settings.json
config/.prosophor/active/cpu_temperature_monitor/: trigger.py
config/.prosophor/active/file_organizer/: trigger.py
config/.prosophor/active/new_user_guide/: trigger.py  trigger_windows
config/.prosophor/scripts/: start_llamacpp_server.sh  stop_llamacpp_server.sh
main_src/: CMakeLists.txt  main.cc
main_src/ai_coding/: ai_coding.cc  ai_coding.h  banner.cc  banner.h
main_src/common/: config.cc  config.h  input_event.h  local_model_utils.cc
main_src/components/: ui_types.h
main_src/managers/: active_trigger_manager.cc  local_model_manager.cc
main_src/mcp/: mcp_client.cc
main_src/media_engine/: CMakeLists.txt
main_src/media_engine/ui_component/: header_bar.h  input_panel.cc  ui_container.cc  ui_panel.h
main_src/platform/: input_handler_win32.cc  pipe_handler.h  pipe_handler_posix.cc  pipe_handler_win32.cc  platform.cc  platform.h
main_src/prosophor_core/: agent_engine.cc  agent_engine.h  command_registry.cc  command_registry.h
main_src/prosophor_core/agents/: plan_mode.cc  plan_mode.h  subagent_coordinator.cc  subagent_coordinator.h  task_manager.cc  task_manager.h
main_src/prosophor_core/config/: config.cc  config.h  effort_config.cc  effort_config.h
main_src/prosophor_core/core/: agent_core.cc  agent_core.h  agent_role.h  agent_session.h  agent_types.h  compact_service.cc  compact_service.h  memory_consolidation_service.cc  memory_consolidation_service.h  messages_schema.h  reference_parser.cc  reference_parser.h
main_src/prosophor_core/managers/: active_interaction_manager.cc  active_interaction_manager.h  active_trigger_manager.h  agent_role_loader.cc  agent_role_loader.h  agent_session_manager.cc  agent_session_manager.h  background_task_manager.cc  background_task_manager.h  local_model_manager.cc  local_model_manager.h  memory_manager.cc  memory_manager.h  permission_manager.cc  permission_manager.h  plugin_manager.cc  plugin_manager.h  skill_loader.cc  skill_loader.h  token_tracker.cc  token_tracker.h
main_src/prosophor_core/mcp/: mcp_client.h
main_src/prosophor_core/network/: curl_client.cc  curl_client.h  local_model_utils.cc  local_model_utils.h
main_src/prosophor_core/providers/: anthropic_provider.cc  anthropic_provider.h  llm_provider.cc  llm_provider.h  ollama_provider.cc  ollama_provider.h  openai_provider.cc  openai_provider.h  provider_router.cc  provider_router.h
main_src/prosophor_core/providers/detail/: anthropic_stream_handler.h  ollama_stream_handler.h  openai_stream_handler.h
main_src/prosophor_core/services/: cron_scheduler.cc  cron_scheduler.h  lsp_manager.h  tts_speaker.cc  tts_speaker.h
main_src/scene/: agent_state_observer.cc  agent_state_observer.h
main_src/services/: lsp_manager.cc
main_src/virtual_sprite/: virtual_sprite.cc  virtual_sprite.h
scripts/: start_llamacpp_server.bat  start_llamacpp_server.sh  stop_llamacpp_server.bat
tests/: CMakeLists.txt
